tests/fixtures/invalid/round_float_bytes.py
# Cannot call round() with Float, Bytes
x = round(1.0, b"hello")
